# elestac

./: .cproject  .gitignore  .project  DocSerializacion.txt  README.md  SWAPswap.data  protocols.xls  setup.sh
CONSOLA/CONSOLA/: .cproject  consola.c  loopeo.c
CONSOLE/: .cproject  CMakeLists.txt  a.out  completo.ansisop  composicion.ansisop  console  console.c  console.config  consumidor.ansisop  explotaExplotaMeExplo.ansisop  facil.ansisop  fibo.ansisop  forES.ansisop  io.ansisop  ioVariable.ansisop  loopeo  loopeo.c  muy_facil.ansisop  productor.ansisop  refacil.ansisop  stackoverflow.ansisop  test_pablo_console  test_pablo_console.c  test_pablo_console.c~  vector.ansisop
CONSOLE/socketCommons/: socketCommons.c  socketCommons.h
CPU/: .cproject  CMakeCache.txt  CMakeLists.txt  cpu  cpu.c  cpu.h  cpu_init.c  cpu_init.h  cpu_structs.h  implementation_ansisop.c  implementation_ansisop.h  pcbSerializer.c  setup.data
CPU/libs/: pcb.c  pcb.h  pcb_tests.c  pcb_tests.h  serialize.h  socketCommons.c  stack.c  stack.h
KERNEL/: .cproject  .project  CMakeLists.txt  kernel  kernel.c  kernel.h  prueba1  prueba2  prueba2.conf  prueba3  prueba3.conf  prueba4  setup.conf  setup.data  socketCommons.c  socketCommons.h
KERNEL/libs/: pcb.c  pcb.h  pcb_tests.c  pcb_tests.h  serialize.c  serialize.h  stack.c  stack.h
SWAP/: .cproject  CMakeLists.txt  DocSerializacion.txt  Prueba.c  SWAP  prueba1  prueba2  prueba3  prueba4  swap.c  swap.data  swapConf
UMC/: separar_codigo_en_instrucciones.c  serializacion_UmcCpu.c  umc.c  umc_stuff.txt
UMC/umc/: .cproject  CMakeLists.txt  prueba1  prueba2  prueba3  prueba4  umc.c  umc_executable
UMC/umc/Debug/: prueba.d  subdir.mk  umc
parser-test/so-ansisop-parser-dummy/: implementation_ansisop.h  runner.c
probando_metadata/: CMakeLists.txt  basic_serialize_test.c  metadatiando  metadatiando.c  serialize_test.c
probando_metadata/libs/: pcb.c  pcb.h  stack.c  stack.h
proceso_consola/: consola.c
proceso_umc/: cliente.c  server_threads.c  umc  umc.c  umc_v1.c
vac-commons/pcb/: pcb.c  pcb.h
vac-commons/serialization/: CMakeLists.txt  pcb.h  pcbDeserialization.c  pcbDeserialization.h  pcbMain.c.c  pcbSerialization.c  pcbSerialization.h  serializacion_estructuraMetaDataProgram.c  serializacion_estructurasDePaginas.c  serialize.c  serialize.h  stack.h
vac-commons/serialize/: serialize.c  serialize.h
vac-commons/socketCommons/: client  server  socketCommons.h  testClientCommons.c  testServerCommons.c  usage.txt
vac-commons/stack/: stack.c  stack.h
